# books_with_django

./: CNAME  cert.crt  cert.key  db.sqlite3  flash_note.md  manage.py  pyproject.toml  todo.txt
actions/: admin.py  models.py  utils.py
actions/migrations/: 0001_initial.py
authnapp/: forms.py  models.py  views.py
authnapp/migrations/: 0001_initial.py
authnapp/templates/: authn.html  registration.html
books/: settings.py  urls.py
mainapp/: admin.py  models.py  urls.py  views.py
mainapp/migrations/: 0001_initial.py  0002_alter_users_books_likes.py  0002_initial.py  0002_remove_users_books_book_image.py  0002_users_books_likes.py  0003_alter_users_books_likes.py  0004_remove_users_books_current_page.py
mainapp/static/css/: base.css  in_process.css  main_page.css  profile_page.css
mainapp/static/js/: follow.js  paginator_scroll.js  test.js
mainapp/templates/: base.html
mainapp/templates/mainapp/: books_list.html  compleated_page.html  process_page.html  profile_page.html  test.html  users_list.html
my_authapp/: admin.py  apps.py  forms.py  models.py  signal.py  views.py
my_authapp/migrations/: 0001_initial.py  0002_alter_userprofile_user.py  0002_castomuser_count_following.py
my_authapp/static/css/: authn.css  edit.css  logout.css  password_change_form.css  registration.css  registration_done.css
my_authapp/templates/my_authapp/: edit.html  registration_done.html  registration_form.html
my_authapp/templates/registration/: logged_out.html  login.html  password_change_done.html  (+1 more)
static/: authn.css  in_process.css  main_page.css  profile_page.css
