[tool.poetry]
name = "books-with-django"
version = "0.1.0"
description = ""
authors = ["q1110 <zeratuliche@gmail.com>"]
readme = "README.md"
packages = [{include = "books_with_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
pillow = "^10.0.0"
black = "^23.7.0"
easy-thumbnails = "^2.8.5"
django-extensions = "^3.2.3"
werkzeug = "^2.3.7"
pyopenssl = "^23.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
